buillt a new design for sales form (salesTest - gets data of all 16 panels in 1 panel compared to previous form).

--- a/Homepage.resx
+++ b/Homepage.resx
@@ -122,10 +122,79 @@
     <value>True</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="usersLabel.Font" type="System.Drawing.Font, System.Drawing">
+  <data name="testLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="testLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="testLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 635</value>
+  </data>
+  <data name="testLabel.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>60, 16, 0, 0</value>
+  </data>
+  <data name="testLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>242, 56</value>
+  </data>
+  <data name="testLabel.TabIndex" type="System.Int32, mscorlib">
+    <value>11</value>
+  </data>
+  <data name="testLabel.Text" xml:space="preserve">
+    <value>Test</value>
+  </data>
+  <data name="&gt;&gt;testLabel.Name" xml:space="preserve">
+    <value>testLabel</value>
+  </data>
+  <data name="&gt;&gt;testLabel.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;testLabel.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;testLabel.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="orders_label.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 12pt, style=Bold</value>
+  </data>
+  <data name="orders_label.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="orders_label.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 313</value>
+  </data>
+  <data name="orders_label.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 45, 0</value>
+  </data>
+  <data name="orders_label.Size" type="System.Drawing.Size, System.Drawing">
+    <value>242, 56</value>
+  </data>
+  <data name="orders_label.TabIndex" type="System.Int32, mscorlib">
+    <value>10</value>
+  </data>
+  <data name="orders_label.Text" xml:space="preserve">
+    <value>Orders</value>
+  </data>
+  <data name="orders_label.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleCenter</value>
+  </data>
+  <data name="&gt;&gt;orders_label.Name" xml:space="preserve">
+    <value>orders_label</value>
+  </data>
+  <data name="&gt;&gt;orders_label.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;orders_label.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;orders_label.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="usersLabel.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 12pt, style=Bold</value>
+  </data>
   <data name="usersLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
@@ -154,7 +223,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;usersLabel.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
   </data>
   <data name="logOutLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
@@ -163,7 +232,7 @@
     <value>NoControl</value>
   </data>
   <data name="logOutLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 513</value>
+    <value>3, 568</value>
   </data>
   <data name="logOutLabel.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>60, 16, 0, 0</value>
@@ -187,7 +256,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;logOutLabel.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="settingsLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
@@ -196,7 +265,7 @@
     <value>NoControl</value>
   </data>
   <data name="settingsLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 446</value>
+    <value>3, 504</value>
   </data>
   <data name="settingsLabel.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>60, 16, 0, 0</value>
@@ -220,7 +289,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;settingsLabel.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>4</value>
   </data>
   <data name="accountsLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
@@ -229,7 +298,7 @@
     <value>NoControl</value>
   </data>
   <data name="accountsLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 381</value>
+    <value>3, 440</value>
   </data>
   <data name="accountsLabel.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>60, 16, 0, 0</value>
@@ -253,7 +322,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;accountsLabel.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
   </data>
   <data name="salesLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
@@ -262,7 +331,7 @@
     <value>NoControl</value>
   </data>
   <data name="salesLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 315</value>
+    <value>3, 376</value>
   </data>
   <data name="salesLabel.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>60, 16, 0, 0</value>
@@ -286,7 +355,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;salesLabel.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
   </data>
   <data name="label4.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
@@ -319,7 +388,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>7</value>
   </data>
   <data name="inventoryLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
@@ -330,6 +399,9 @@
   <data name="inventoryLabel.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 250</value>
   </data>
+  <data name="inventoryLabel.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 26, 0</value>
+  </data>
   <data name="inventoryLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>242, 56</value>
   </data>
@@ -337,7 +409,7 @@
     <value>3</value>
   </data>
   <data name="inventoryLabel.Text" xml:space="preserve">
-    <value>Inventory and Orders</value>
+    <value>Inventory</value>
   </data>
   <data name="inventoryLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleCenter</value>
@@ -352,7 +424,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;inventoryLabel.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>8</value>
   </data>
   <data name="attendanceLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
@@ -382,7 +454,7 @@
     <value>panel1</value>
   </data>
   <data name="&gt;&gt;attendanceLabel.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>9</value>
   </data>
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>-4, -4</value>
@@ -526,7 +598,7 @@
     <value>6</value>
   </data>
   <data name="stockGrid.Location" type="System.Drawing.Point, System.Drawing">
-    <value>276, 509</value>
+    <value>276, 500</value>
   </data>
   <data name="stockGrid.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 2, 3, 2</value>
@@ -678,17 +750,80 @@
   <data name="&gt;&gt;label5.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="dataGridView2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>276, 803</value>
+  <data name="dateDataGridViewTextBoxColumn.HeaderText" xml:space="preserve">
+    <value>date</value>
   </data>
-  <data name="dataGridView2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 2, 3, 2</value>
+  <data name="dateDataGridViewTextBoxColumn.MinimumWidth" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="dateDataGridViewTextBoxColumn.Width" type="System.Int32, mscorlib">
+    <value>125</value>
+  </data>
+  <data name="shiftDataGridViewTextBoxColumn.HeaderText" xml:space="preserve">
+    <value>shift</value>
+  </data>
+  <data name="shiftDataGridViewTextBoxColumn.MinimumWidth" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="shiftDataGridViewTextBoxColumn.Width" type="System.Int32, mscorlib">
+    <value>125</value>
+  </data>
+  <data name="startMeterDataGridViewTextBoxColumn.HeaderText" xml:space="preserve">
+    <value>startMeter</value>
+  </data>
+  <data name="startMeterDataGridViewTextBoxColumn.MinimumWidth" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="startMeterDataGridViewTextBoxColumn.Width" type="System.Int32, mscorlib">
+    <value>125</value>
+  </data>
+  <data name="endMeterDataGridViewTextBoxColumn.HeaderText" xml:space="preserve">
+    <value>endMeter</value>
+  </data>
+  <data name="endMeterDataGridViewTextBoxColumn.MinimumWidth" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="endMeterDataGridViewTextBoxColumn.Width" type="System.Int32, mscorlib">
+    <value>125</value>
+  </data>
+  <data name="salesLitersDataGridViewTextBoxColumn.HeaderText" xml:space="preserve">
+    <value>salesLiters</value>
+  </data>
+  <data name="salesLitersDataGridViewTextBoxColumn.MinimumWidth" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="salesLitersDataGridViewTextBoxColumn.Width" type="System.Int32, mscorlib">
+    <value>125</value>
+  </data>
+  <data name="salesLKRDataGridViewTextBoxColumn.HeaderText" xml:space="preserve">
+    <value>salesLKR</value>
+  </data>
+  <data name="salesLKRDataGridViewTextBoxColumn.MinimumWidth" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="salesLKRDataGridViewTextBoxColumn.Width" type="System.Int32, mscorlib">
+    <value>125</value>
+  </data>
+  <data name="nozzelDataGridViewTextBoxColumn.HeaderText" xml:space="preserve">
+    <value>nozzel</value>
+  </data>
+  <data name="nozzelDataGridViewTextBoxColumn.MinimumWidth" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="nozzelDataGridViewTextBoxColumn.Width" type="System.Int32, mscorlib">
+    <value>125</value>
+  </data>
+  <metadata name="salesTestBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>207, 17</value>
+  </metadata>
+  <data name="dataGridView2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>290, 838</value>
   </data>
   <data name="dataGridView2.RowHeadersWidth" type="System.Int32, mscorlib">
-    <value>62</value>
+    <value>51</value>
   </data>
   <data name="dataGridView2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>869, 241</value>
+    <value>934, 150</value>
   </data>
   <data name="dataGridView2.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -705,6 +840,12 @@
   <data name="&gt;&gt;dataGridView2.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <metadata name="database1DataSet2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="salesTestTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>421, 17</value>
+  </metadata>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -722,6 +863,66 @@
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Homepage</value>
+  </data>
+  <data name="&gt;&gt;database1DataSet2.Name" xml:space="preserve">
+    <value>database1DataSet2</value>
+  </data>
+  <data name="&gt;&gt;database1DataSet2.Type" xml:space="preserve">
+    <value>Software_for_Filling_Station.Database1DataSet2, Database1DataSet2.Designer.cs.dll, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;salesTestBindingSource.Name" xml:space="preserve">
+    <value>salesTestBindingSource</value>
+  </data>
+  <data name="&gt;&gt;salesTestBindingSource.Type" xml:space="preserve">
+    <value>System.Windows.Forms.BindingSource, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;salesTestTableAdapter.Name" xml:space="preserve">
+    <value>salesTestTableAdapter</value>
+  </data>
+  <data name="&gt;&gt;salesTestTableAdapter.Type" xml:space="preserve">
+    <value>Software_for_Filling_Station.Database1DataSet2TableAdapters.salesTestTableAdapter, Database1DataSet2.Designer.cs.dll, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;dateDataGridViewTextBoxColumn.Name" xml:space="preserve">
+    <value>dateDataGridViewTextBoxColumn</value>
+  </data>
+  <data name="&gt;&gt;dateDataGridViewTextBoxColumn.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DataGridViewTextBoxColumn, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;shiftDataGridViewTextBoxColumn.Name" xml:space="preserve">
+    <value>shiftDataGridViewTextBoxColumn</value>
+  </data>
+  <data name="&gt;&gt;shiftDataGridViewTextBoxColumn.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DataGridViewTextBoxColumn, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;startMeterDataGridViewTextBoxColumn.Name" xml:space="preserve">
+    <value>startMeterDataGridViewTextBoxColumn</value>
+  </data>
+  <data name="&gt;&gt;startMeterDataGridViewTextBoxColumn.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DataGridViewTextBoxColumn, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;endMeterDataGridViewTextBoxColumn.Name" xml:space="preserve">
+    <value>endMeterDataGridViewTextBoxColumn</value>
+  </data>
+  <data name="&gt;&gt;endMeterDataGridViewTextBoxColumn.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DataGridViewTextBoxColumn, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;salesLitersDataGridViewTextBoxColumn.Name" xml:space="preserve">
+    <value>salesLitersDataGridViewTextBoxColumn</value>
+  </data>
+  <data name="&gt;&gt;salesLitersDataGridViewTextBoxColumn.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DataGridViewTextBoxColumn, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;salesLKRDataGridViewTextBoxColumn.Name" xml:space="preserve">
+    <value>salesLKRDataGridViewTextBoxColumn</value>
+  </data>
+  <data name="&gt;&gt;salesLKRDataGridViewTextBoxColumn.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DataGridViewTextBoxColumn, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;nozzelDataGridViewTextBoxColumn.Name" xml:space="preserve">
+    <value>nozzelDataGridViewTextBoxColumn</value>
+  </data>
+  <data name="&gt;&gt;nozzelDataGridViewTextBoxColumn.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DataGridViewTextBoxColumn, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>Homepage</value>
